# 759_final_project

./: .gitignore
sift-cpp/cuda/: cudasift  cudasift.cu  runsift.sh  siftcuda.cuh
sift-cpp/examples/: match_features.cpp
sift-cpp/src/: cudasift.cu  image.cpp  runcuda.sh  runomp.sh  sift.cpp
src/: plot.py
src/cuda-sift/: cudasift.cu  run_test.sh
src/opencv-sift/: Makefile  main.cpp  run_test.sh
src/openmp-sift/: CMakeLists.txt  run_test.sh
src/serial-sift/: run_test.sh
src/serial-sift/examples/: match_features.cpp
